tests/NormalTests/paczka1/small_fuzzy/94069220.err
Error in line 7: 5XtkOA961O92,6
Error in line 6: 5Xtk A961 65,7
